log
Thu 14 Sep 2023 07:00:35 PM UTC: 
 tests:  1|8
total_score: 0/70
55fecf4
Thu 14 Sep 2023 07:04:46 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
946b236
Thu 14 Sep 2023 07:06:03 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|8
total_score: 0/70
d33b4aa
Thu 14 Sep 2023 07:06:29 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:48:23: error: ‘lt’ undeclared (first use in this function)
   48 |     map->lower_than = lt;
      |                       ^~
treemap.c:48:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
13076a9
Thu 14 Sep 2023 07:06:55 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
9e61234
Thu 14 Sep 2023 07:16:42 PM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
8cda964
Thu 14 Sep 2023 07:17:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
cd788dc
Thu 14 Sep 2023 07:25:16 PM UTC: 
 treemap.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
98954ec
Thu 14 Sep 2023 07:32:49 PM UTC: 
 treemap.c | 60 +++++++++++++++++++++++++++++-------------------------------
 1 file changed, 29 insertions(+), 31 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:74:33: error: expected ‘;’ before ‘currentNode’
   74 |         parentNode = currentNode
      |                                 ^
      |                                 ;
   75 |         currentNode = currentNode->left;
      |         ~~~~~~~~~~~              
treemap.c:79:33: error: expected ‘;’ before ‘currentNode’
   79 |         parentNode = currentNode
      |                                 ^
      |                                 ;
   80 |         currentNode = currentNode->right;
      |         ~~~~~~~~~~~              
treemap.c:65:13: error: variable ‘parentNode’ set but not used [-Werror=unused-but-set-variable]
   65 |   TreeNode* parentNode = NULL;
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1720822
Thu 14 Sep 2023 07:33:05 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:65:13: error: variable ‘parentNode’ set but not used [-Werror=unused-but-set-variable]
   65 |   TreeNode* parentNode = NULL;
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e95844d
Thu 14 Sep 2023 07:34:08 PM UTC: 
 treemap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
31e5def
Fri 15 Sep 2023 06:24:15 PM UTC: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  11|6
total_score: 15/70
ba84ae1
Fri 15 Sep 2023 06:31:56 PM UTC: 
 treemap.c | 60 ++++++++++++++++++++----------------------------------------
 1 file changed, 20 insertions(+), 40 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:89:7: error: ‘parentNode’ undeclared (first use in this function); did you mean ‘parent’?
   89 |   if (parentNode == NULL) {
      |       ^~~~~~~~~~
      |       parent
treemap.c:89:7: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:65:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   65 |   TreeNode* parent = NULL;
      |             ^~~~~~
treemap.c: At top level:
treemap.c:105:2: error: expected identifier or ‘(’ before ‘/’ token
  105 | */
      |  ^
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
29e37b0
Fri 15 Sep 2023 06:33:13 PM UTC: 
 treemap.c | 25 ++++++++-----------------
 1 file changed, 8 insertions(+), 17 deletions(-)
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
46ea8a6
Fri 15 Sep 2023 06:35:30 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  13|5
total_score: 25/70
172baad
Fri 15 Sep 2023 06:38:07 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  13|5
total_score: 25/70
18907df
